fix news headlines legibility.

--- a/css/pages.css
+++ b/css/pages.css
@@ -1235,7 +1235,7 @@ hgroup {
   font-style: normal;
   color: #007161;
   font-size: 18px;
-  background-color: rgba(235, 234, 213, 0.5);
+  background-color: rgba(235, 234, 213, 0.2);
   height: 30px;
   padding: 5px 0 0 15px;
 }
